public interface StockService {
    double fetchPrice(String symbol);
    String fetchInfo(String symbol);
}
